--- a/Jsdom.css
+++ b/Jsdom.css
@@ -26,7 +26,7 @@ h1, h2{
 }
 
 #page-banner{
-    background: rgb(244, 133, 7);
+    background: #6D9886;
     padding: 10px 0;
 }
 
@@ -37,7 +37,7 @@ h1, h2{
 
 #page-banner input{
     box-sizing: border-box;
-    width: 300px;
+    width: 280px;
     margin: 20px 0;
     display: block;
     padding: 10px;
@@ -52,22 +52,22 @@ h1, h2{
     margin: 20px 0;
     display: inline-block;
     border: 1px solid black;
-    background: rgb(244, 133, 7);
+    background: #D0C9C0;
     padding: 10px 15px;
     font-size: 16px;
     border-radius: 0 4px 4px 0;
     cursor: pointer;
     border-left: 0;
-    width: 70px;
+    width: 50px;
 }
 
 #page-banner .search:hover{
-    background-color: rgb(207, 115, 9);
+    background-color: #8a8884;
 }
 
 .nav{
     overflow: hidden;
-    background-color:  rgb(244, 133, 7);
+    background-color:  #6D9886;
     padding: 10px 10px 0 10px;
 }
 
@@ -83,7 +83,7 @@ h1, h2{
 }
 
 .nav a:hover{
-    background-color: rgb(207, 115, 9);
+    background-color: #628175;
 }
 
 .nav a.icon{
@@ -106,25 +106,24 @@ h1, h2{
 
 #book-list li{
     padding: 20px;
-    border-left: 5px solid orange;
+    border-left: 5px solid #6D9886;
     margin: 20px 10px;
 }
 
 #book-list li:hover{
-    border-color: rgb(207, 115, 9);
+    border-color: #8a8884;
 }
 
 .delete{
     float: right;
-    background: rgb(244, 133, 7);
+    background: #D0C9C0;
     padding: 6px;
     border-radius: 4px;
     cursor: pointer;
-    color: white;
 }
 
 .delete:hover{
-    background:  rgb(207, 115, 9);
+    background:  #8a8884;
 }
 
 #add-book{
@@ -146,20 +145,20 @@ h1, h2{
 
 #add-book button{
     border: 1px solid black;
-    background: rgb(244, 133, 7);
+    background: #D0C9C0;
     padding: 10px 10px;
     font-size: 16px;
     display: inline-block;
     border-radius: 0 4px 4px 0;
     cursor: pointer;
-    width: 70px;
+    width: 50px;
     margin: 20px 0;
     border-left: 0;
-    color: white;
+    color: black;
 }
 
 #add-book button:hover{
-    background-color: rgb(207, 115, 9);
+    background-color: #8a8884;
 }
 
 #add-book:after{
